Updated section 7.2 of cog sci manuscript

--- a/Experiments/cogpsych-code/plot_modelcompare_ind.ipynb
+++ b/Experiments/cogpsych-code/plot_modelcompare_ind.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,8 @@
     "sns.set_style(\"whitegrid\")\n",
     "\n",
     "# Specify default dataname\n",
-    "dbname = 'experiment-xcrABC.db'#raw data\n",
-    "dataname_def = 'xcrABC'#bestparms also comes from here\n",
+    "dbname = 'experiments-5con.db'#raw data\n",
+    "dataname_def = '5con'#bestparms also comes from here\n",
     "\n",
     "#plotting options\n",
     "STAT_LIMS =  (-1.0, 1.0)\n",
@@ -101,7 +101,7 @@
     "    for i,parmname in enumerate(best_params_t[modelname]['parmnames']):\n",
     "        parmval = best_params_t[modelname]['bestparmsll']\n",
     "        best_params[modelname][parmname] = parmval[i]\n",
-    "modelList = [Packer,RepresentJK13,NPacker,NRepresentJK13]\n",
+    "modelList = [Packer,RepresentJK13]#,NPacker,NRepresentJK13]\n",
     "#modelList = [CopyTweak,CopyTweakRep,Packer, RepresentJK13,]                            \n",
     "\n",
     "#Specify plot order\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -142,25 +142,144 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ppt: 3\n"
+      "Ppt: 0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/sourguyxian/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:58: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n"
+      "/Users/sourguyxian/anaconda3/envs/py27/lib/python2.7/site-packages/ipykernel_launcher.py:58: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Ppt: 1\n",
+      "Ppt: 2\n",
+      "Ppt: 3\n",
+      "Ppt: 4\n",
+      "Ppt: 5\n",
+      "Ppt: 6\n",
+      "Ppt: 7\n",
+      "Ppt: 8\n",
+      "Ppt: 9\n",
+      "Ppt: 10\n",
       "Ppt: 11\n",
+      "Ppt: 12\n",
+      "Ppt: 13\n",
+      "Ppt: 14\n",
+      "Ppt: 15\n",
+      "Ppt: 16\n",
+      "Ppt: 17\n",
       "Ppt: 18\n",
+      "Ppt: 19\n",
+      "Ppt: 20\n",
+      "Ppt: 21\n",
+      "Ppt: 22\n",
+      "Ppt: 23\n",
+      "Ppt: 24\n",
+      "Ppt: 25\n",
+      "Ppt: 26\n",
+      "Ppt: 27\n",
+      "Ppt: 28\n",
+      "Ppt: 29\n",
+      "Ppt: 30\n",
+      "Ppt: 31\n",
+      "Ppt: 32\n",
+      "Ppt: 33\n",
+      "Ppt: 34\n",
+      "Ppt: 35\n",
+      "Ppt: 36\n",
       "Ppt: 37\n",
+      "Ppt: 38\n",
       "Ppt: 39\n",
+      "Ppt: 40\n",
+      "Ppt: 41\n",
+      "Ppt: 42\n",
+      "Ppt: 43\n",
+      "Ppt: 44\n",
+      "Ppt: 45\n",
+      "Ppt: 46\n",
+      "Ppt: 47\n",
+      "Ppt: 48\n",
+      "Ppt: 49\n",
+      "Ppt: 50\n",
+      "Ppt: 51\n",
+      "Ppt: 52\n",
+      "Ppt: 53\n",
+      "Ppt: 54\n",
+      "Ppt: 55\n",
+      "Ppt: 56\n",
+      "Ppt: 57\n",
+      "Ppt: 58\n",
+      "Ppt: 59\n",
+      "Ppt: 60\n",
+      "Ppt: 61\n",
+      "Ppt: 62\n",
+      "Ppt: 63\n",
+      "Ppt: 64\n",
+      "Ppt: 65\n",
+      "Ppt: 66\n",
+      "Ppt: 67\n",
+      "Ppt: 68\n",
+      "Ppt: 69\n",
+      "Ppt: 70\n",
+      "Ppt: 71\n",
+      "Ppt: 72\n",
+      "Ppt: 73\n",
+      "Ppt: 74\n",
+      "Ppt: 75\n",
+      "Ppt: 76\n",
+      "Ppt: 77\n",
+      "Ppt: 78\n",
+      "Ppt: 79\n",
+      "Ppt: 80\n",
+      "Ppt: 81\n",
+      "Ppt: 82\n",
+      "Ppt: 83\n",
+      "Ppt: 84\n",
+      "Ppt: 85\n",
+      "Ppt: 86\n",
+      "Ppt: 87\n",
+      "Ppt: 88\n",
+      "Ppt: 89\n",
+      "Ppt: 90\n",
+      "Ppt: 91\n",
+      "Ppt: 92\n",
+      "Ppt: 93\n",
+      "Ppt: 94\n",
       "Ppt: 95\n",
+      "Ppt: 96\n",
+      "Ppt: 97\n",
+      "Ppt: 98\n",
+      "Ppt: 99\n",
+      "Ppt: 100\n",
+      "Ppt: 101\n",
+      "Ppt: 102\n",
+      "Ppt: 103\n",
+      "Ppt: 104\n",
+      "Ppt: 105\n",
+      "Ppt: 106\n",
+      "Ppt: 107\n",
+      "Ppt: 108\n",
+      "Ppt: 109\n",
+      "Ppt: 110\n",
+      "Ppt: 111\n",
+      "Ppt: 112\n",
+      "Ppt: 113\n",
+      "Ppt: 114\n",
+      "Ppt: 115\n",
+      "Ppt: 116\n",
+      "Ppt: 117\n",
+      "Ppt: 118\n",
+      "Ppt: 119\n",
+      "Ppt: 120\n",
+      "Ppt: 121\n",
+      "Ppt: 122\n",
+      "Ppt: 123\n",
+      "Ppt: 124\n",
       "Ppt: 125\n",
       "Ppt: 126\n",
       "Ppt: 127\n",
@@ -169,16 +288,22 @@
       "Ppt: 130\n",
       "Ppt: 131\n",
       "Ppt: 132\n",
+      "Ppt: 133\n",
       "Ppt: 134\n",
       "Ppt: 135\n",
+      "Ppt: 136\n",
+      "Ppt: 137\n",
+      "Ppt: 138\n",
       "Ppt: 139\n",
       "Ppt: 140\n",
+      "Ppt: 141\n",
       "Ppt: 142\n",
       "Ppt: 143\n",
       "Ppt: 144\n",
       "Ppt: 145\n",
       "Ppt: 146\n",
       "Ppt: 147\n",
+      "Ppt: 148\n",
       "Ppt: 149\n",
       "Ppt: 150\n",
       "Ppt: 151\n",
@@ -188,14 +313,18 @@
       "Ppt: 155\n",
       "Ppt: 156\n",
       "Ppt: 157\n",
+      "Ppt: 158\n",
+      "Ppt: 159\n",
       "Ppt: 160\n",
       "Ppt: 161\n",
+      "Ppt: 162\n",
       "Ppt: 163\n",
       "Ppt: 164\n",
       "Ppt: 165\n",
       "Ppt: 166\n",
       "Ppt: 167\n",
       "Ppt: 168\n",
+      "Ppt: 169\n",
       "Ppt: 170\n",
       "Ppt: 171\n",
       "Ppt: 172\n",
@@ -205,23 +334,32 @@
       "Ppt: 176\n",
       "Ppt: 177\n",
       "Ppt: 178\n",
+      "Ppt: 179\n",
       "Ppt: 180\n",
       "Ppt: 181\n",
       "Ppt: 182\n",
       "Ppt: 183\n",
       "Ppt: 184\n",
       "Ppt: 185\n",
+      "Ppt: 186\n",
+      "Ppt: 187\n",
       "Ppt: 188\n",
+      "Ppt: 189\n",
+      "Ppt: 190\n",
       "Ppt: 191\n",
       "Ppt: 192\n",
       "Ppt: 193\n",
       "Ppt: 194\n",
       "Ppt: 195\n",
+      "Ppt: 196\n",
       "Ppt: 197\n",
       "Ppt: 198\n",
       "Ppt: 199\n",
       "Ppt: 200\n",
+      "Ppt: 201\n",
       "Ppt: 202\n",
+      "Ppt: 203\n",
+      "Ppt: 204\n",
       "Ppt: 205\n",
       "Ppt: 206\n",
       "Ppt: 207\n",
@@ -229,14 +367,22 @@
       "Ppt: 209\n",
       "Ppt: 210\n",
       "Ppt: 211\n",
+      "Ppt: 212\n",
+      "Ppt: 213\n",
       "Ppt: 214\n",
       "Ppt: 215\n",
+      "Ppt: 216\n",
+      "Ppt: 217\n",
       "Ppt: 218\n",
       "Ppt: 219\n",
+      "Ppt: 220\n",
       "Ppt: 221\n",
       "Ppt: 222\n",
       "Ppt: 223\n",
+      "Ppt: 224\n",
       "Ppt: 225\n",
+      "Ppt: 226\n",
+      "Ppt: 227\n",
       "Ppt: 228\n",
       "Ppt: 229\n",
       "Ppt: 230\n",
@@ -249,16 +395,22 @@
       "Ppt: 237\n",
       "Ppt: 238\n",
       "Ppt: 239\n",
+      "Ppt: 240\n",
       "Ppt: 241\n",
+      "Ppt: 242\n",
       "Ppt: 243\n",
+      "Ppt: 244\n",
       "Ppt: 245\n",
       "Ppt: 246\n",
       "Ppt: 247\n",
       "Ppt: 248\n",
+      "Ppt: 249\n",
       "Ppt: 250\n",
       "Ppt: 251\n",
       "Ppt: 252\n",
+      "Ppt: 253\n",
       "Ppt: 254\n",
+      "Ppt: 255\n",
       "Ppt: 256\n",
       "Ppt: 257\n",
       "Ppt: 258\n",
@@ -272,14 +424,19 @@
       "Ppt: 266\n",
       "Ppt: 267\n",
       "Ppt: 268\n",
+      "Ppt: 269\n",
+      "Ppt: 270\n",
       "Ppt: 271\n",
+      "Ppt: 272\n",
       "Ppt: 273\n",
+      "Ppt: 274\n",
       "Ppt: 275\n",
       "Ppt: 276\n",
       "Ppt: 277\n",
       "Ppt: 278\n",
       "Ppt: 279\n",
       "Ppt: 280\n",
+      "Ppt: 281\n",
       "Ppt: 282\n",
       "Ppt: 283\n",
       "Ppt: 284\n",
@@ -289,27 +446,38 @@
       "Ppt: 288\n",
       "Ppt: 289\n",
       "Ppt: 290\n",
+      "Ppt: 291\n",
+      "Ppt: 292\n",
       "Ppt: 293\n",
+      "Ppt: 294\n",
       "Ppt: 295\n",
       "Ppt: 296\n",
       "Ppt: 297\n",
+      "Ppt: 298\n",
       "Ppt: 299\n",
       "Ppt: 300\n",
       "Ppt: 301\n",
       "Ppt: 302\n",
       "Ppt: 303\n",
+      "Ppt: 304\n",
       "Ppt: 305\n",
       "Ppt: 306\n",
+      "Ppt: 307\n",
+      "Ppt: 308\n",
+      "Ppt: 309\n",
       "Ppt: 310\n",
+      "Ppt: 311\n",
       "Ppt: 312\n",
       "Ppt: 313\n",
       "Ppt: 314\n",
       "Ppt: 315\n",
       "Ppt: 316\n",
+      "Ppt: 317\n",
       "Ppt: 318\n",
       "Ppt: 319\n",
       "Ppt: 320\n",
       "Ppt: 321\n",
+      "Ppt: 322\n",
       "Ppt: 323\n",
       "Ppt: 324\n",
       "Ppt: 325\n",
@@ -318,16 +486,25 @@
       "Ppt: 328\n",
       "Ppt: 329\n",
       "Ppt: 330\n",
+      "Ppt: 331\n",
+      "Ppt: 332\n",
       "Ppt: 333\n",
       "Ppt: 334\n",
+      "Ppt: 335\n",
+      "Ppt: 336\n",
       "Ppt: 337\n",
       "Ppt: 338\n",
+      "Ppt: 339\n",
+      "Ppt: 340\n",
+      "Ppt: 341\n",
       "Ppt: 342\n",
       "Ppt: 343\n",
       "Ppt: 344\n",
+      "Ppt: 345\n",
       "Ppt: 346\n",
       "Ppt: 347\n",
       "Ppt: 348\n",
+      "Ppt: 349\n",
       "Ppt: 350\n",
       "Ppt: 351\n",
       "Ppt: 352\n",
@@ -335,16 +512,25 @@
       "Ppt: 354\n",
       "Ppt: 355\n",
       "Ppt: 356\n",
+      "Ppt: 357\n",
+      "Ppt: 358\n",
       "Ppt: 359\n",
+      "Ppt: 360\n",
       "Ppt: 361\n",
+      "Ppt: 362\n",
       "Ppt: 363\n",
       "Ppt: 364\n",
+      "Ppt: 365\n",
+      "Ppt: 366\n",
       "Ppt: 367\n",
+      "Ppt: 368\n",
+      "Ppt: 369\n",
       "Ppt: 370\n",
       "Ppt: 371\n",
       "Ppt: 372\n",
       "Ppt: 373\n",
       "Ppt: 374\n",
+      "Ppt: 375\n",
       "Ppt: 376\n",
       "Ppt: 377\n",
       "Ppt: 378\n",
@@ -352,49 +538,17 @@
       "Ppt: 380\n",
       "Ppt: 381\n",
       "Ppt: 382\n",
+      "Ppt: 383\n",
+      "Ppt: 384\n",
       "Ppt: 385\n",
+      "Ppt: 386\n",
       "Ppt: 387\n",
       "Ppt: 388\n",
+      "Ppt: 389\n",
       "Ppt: 390\n",
       "Ppt: 391\n",
       "Ppt: 392\n",
-      "Ppt: 393\n",
-      "Ppt: 394\n",
-      "Ppt: 395\n",
-      "Ppt: 396\n",
-      "Ppt: 397\n",
-      "Ppt: 398\n",
-      "Ppt: 401\n",
-      "Ppt: 402\n",
-      "Ppt: 403\n",
-      "Ppt: 404\n",
-      "Ppt: 405\n",
-      "Ppt: 407\n",
-      "Ppt: 408\n",
-      "Ppt: 409\n",
-      "Ppt: 410\n",
-      "Ppt: 411\n",
-      "Ppt: 416\n",
-      "Ppt: 417\n",
-      "Ppt: 420\n",
-      "Ppt: 421\n",
-      "Ppt: 422\n",
-      "Ppt: 423\n",
-      "Ppt: 425\n",
-      "Ppt: 426\n",
-      "Ppt: 427\n",
-      "Ppt: 428\n",
-      "Ppt: 429\n",
-      "Ppt: 430\n",
-      "Ppt: 431\n",
-      "Ppt: 432\n",
-      "Ppt: 433\n",
-      "Ppt: 434\n",
-      "Ppt: 436\n",
-      "Ppt: 438\n",
-      "Ppt: 439\n",
-      "Ppt: 440\n",
-      "Ppt: 441\n"
+      "Ppt: 393\n"
      ]
     }
    ],
@@ -1180,6 +1334,37 @@
     "params = best_params[model.model]\n",
     "categories1 = [np.array([[-1,-1],[1,-1],[-1,1],[1,1]])]\n",
     "temp1 = model(categories1,params,trialppt.stimrange).get_generation_ps(trialppt.stimuli,1,'generate',wrap_ax=wrap_ax)\n",
+    "outps = sum(temp1[outind])\n",
+    "innps = sum(temp1[innind])\n",
+    "# print(np.round(np.reshape(temp1,(9,9)),3))\n",
+    "\n",
+    "print('Outer edges: ' + str(np.round(outps,2)))\n",
+    "print('Inner spaces: ' + str(np.round(innps,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outer edges: 0.34\n",
+      "Inner spaces: 0.66\n"
+     ]
+    }
+   ],
+   "source": [
+    "##Probabilities at outer edge vs inner space - Packer\n",
+    "outind = range(9) + [(e+1)*9 for e in range(7)] + [(e+1)*9+8 for e in range(7)] + range(72,80)\n",
+    "innind = [i for i in range(81) if not i in outind]\n",
+    "model = Packer\n",
+    "params = best_params[model.model]\n",
+    "categories1 = [np.array([[-1,-1],[1,-1],[-1,1],[1,1]])]\n",
+    "wrap_ax = None\n",
+    "temp1 = model(categories1,params,trials.stimrange,wrap_ax = None).get_generation_ps(trials.stimuli,1,'generate')\n",
     "outps = sum(temp1[outind])\n",
     "innps = sum(temp1[innind])\n",
     "# print(np.round(np.reshape(temp1,(9,9)),3))\n",
