Updated draft Exp 3 with correlations.

--- a/Manuscripts/post-cogpsych/citations.bib
+++ b/Manuscripts/post-cogpsych/citations.bib
@@ -25,6 +25,30 @@
   pages =		 {910-944},
   year =		 {2017}
 }
+
+@article{barsalou1985ideals,
+  title =		 {Ideals, central tendency, and frequency of instantiation as determinants of graded structure in
+                  categories.},
+  author =		 {Barsalou, Lawrence W},
+  journal =		 {Journal of experimental psychology: learning, memory, and cognition},
+  volume =		 {11},
+  number =		 {4},
+  pages =		 {629-654},
+  year =		 {1985},
+  publisher =	 {American Psychological Association}
+}
+
+@article{chin2002effect,
+  title =		 {The effect of category learning on sensitivity to within-category correlations},
+  author =		 {Chin-Parker, Seth and Ross, Brian H},
+  journal =		 {Memory \& Cognition},
+  volume =		 {30},
+  number =		 {3},
+  pages =		 {353--362},
+  year =		 {2002},
+  publisher =	 {Springer}
+}
+
 @article{imai1965discriminability,
   title={Discriminability and preference for attributes in free and constrained classification.},
   author={Imai, Shiro and Garner, WR},
@@ -316,6 +340,23 @@ year = 2016,
 publisher = {Curran Associates, Inc.}
 }
 
+@article{malt1984correlated,
+  title =		 {Correlated properties in natural categories},
+  author =		 {Malt, Barbara C and Smith, Edward E},
+  journal =		 {Journal of verbal learning and verbal behavior},
+  volume =		 {23},
+  number =		 {2},
+  pages =		 {250--269},
+  year =		 {1984},
+  publisher =	 {Elsevier}
+}
+
+@book{murphy2004big,
+  title =		 {The big book of concepts},
+  author =		 {Murphy, Gregory},
+  year =		 {2004},
+  publisher =	 {MIT press}
+}
 
 @article{abbott16,
 	author = {J. T. Abbott and T. L. Griffiths and T. Reiger},
@@ -708,6 +749,28 @@ publisher = {Curran Associates, Inc.}
  number = "3",
  pages = "352--369",
  year = 1994
+}
+@article{palmeri2001central,
+  title =		 {Central tendencies, extreme points, and prototype enhancement effects in ill-defined perceptual
+                  categorization},
+  author =		 {Palmeri, Thomas J and Nosofsky, Robert M},
+  journal =		 {The Quarterly Journal of Experimental Psychology Section A},
+  volume =		 {54},
+  number =		 {1},
+  pages =		 {197--235},
+  year =		 {2001},
+  publisher =	 {SAGE Publications Sage UK: London, England}
+}
+@article{pothos2011measuring,
+  title =		 {Measuring category intuitiveness in unconstrained categorization tasks},
+  author =		 {Pothos, Emmanuel M and Perlman, Amotz and Bailey, Todd M and Kurtz, Ken and Edwards, Darren J and
+                  Hines, Peter and McDonnell, John V},
+  journal =		 {Cognition},
+  volume =		 {121},
+  number =		 {1},
+  pages =		 {83--100},
+  year =		 {2011},
+  publisher =	 {Elsevier}
 }
 
 @book{pothoswills2011,
